--- a/index.html
+++ b/index.html
@@ -14,20 +14,34 @@
       <button id="pedal" class="toggle-button">Pedal</button>
       <button id="test" class="toggle-button">Test</button>
       <div id="piano"></div>
-      <button id="interval-1" class="toggle-button">Minor 2nd (1 semitone)</button>
-      <button id="interval-2" class="toggle-button">Major 2nd (2 semitones)</button>
-      <button id="interval-3" class="toggle-button">Minor 3rd (3 semitones)</button>
-      <button id="interval-4" class="toggle-button">Major 3rd (4 semitones)</button>
-      <button id="interval-5" class="toggle-button">Perfect 4th (5 semitones)</button>
-      <button id="interval-6" class="toggle-button">Tritone (6 semitones)</button>
-      <button id="interval-7" class="toggle-button">Perfect 5th (7 semitones)</button>
-      <button id="interval-8" class="toggle-button">Minor 6th (8 semitones)</button>
-      <button id="interval-9" class="toggle-button">Major 6th (9 semitones)</button>
-      <button id="interval-10" class="toggle-button">Minor 7th (10 semitones)</button>
-      <button id="interval-11" class="toggle-button">Major 7th (11 semitones)</button>
-      <button id="interval-12" class="toggle-button">Octave (12 semitones)</button>
-      <button id="interval-13" class="toggle-button">Major 9th (13 semitones)</button>
-      <button id="interval-14" class="toggle-button">Minor 9th (14 semitones)</button>
+    </div>
+
+    <div id="interval-main-buttons">
+      <div id="interval-guess-buttons">
+        <!-- guess buttons generated here -->
+      </div>
+      <div id="interval-second-row-buttons">
+        <button id="interval-start-button">Start</button>
+        <button id="interval-play-button">Play</button>
+        <button id="interval-next-button">Next</button>
+      </div>
+
+    </div>
+    <div id="interval-settings">
+      <button id="interval-1" class="interval-button">Minor 2nd (1 semitone)</button>
+      <button id="interval-2" class="interval-button">Major 2nd (2 semitones)</button>
+      <button id="interval-3" class="interval-button">Minor 3rd (3 semitones)</button>
+      <button id="interval-4" class="interval-button">Major 3rd (4 semitones)</button>
+      <button id="interval-5" class="interval-button">Perfect 4th (5 semitones)</button>
+      <button id="interval-6" class="interval-button">Tritone (6 semitones)</button>
+      <button id="interval-7" class="interval-button">Perfect 5th (7 semitones)</button>
+      <button id="interval-8" class="interval-button">Minor 6th (8 semitones)</button>
+      <button id="interval-9" class="interval-button">Major 6th (9 semitones)</button>
+      <button id="interval-10" class="interval-button">Minor 7th (10 semitones)</button>
+      <button id="interval-11" class="interval-button">Major 7th (11 semitones)</button>
+      <button id="interval-12" class="interval-button">Octave (12 semitones)</button>
+      <button id="interval-13" class="interval-button">Major 9th (13 semitones)</button>
+      <button id="interval-14" class="interval-button">Minor 9th (14 semitones)</button>
     </div>
 
 
