feat: add playing technique setting

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
   <body>
 
 
+  
 
+    <button id="pedal" class="toggle-button">Pedal</button>
+    <select name="playing-technique" id="playing-technique">
+      <option value="ascending">Ascending</option>
+      <option value="descending">Descending</option>
+      <option value="random">Ascending & Descending</option>
+      <option value="harmonic">Harmonic (simultaneous)</option>
+    </select>
     <div id="piano-container">
-      <button id="pedal" class="toggle-button">Pedal</button>
-      <button id="test" class="toggle-button">Test</button>
+
       <div id="piano"></div>
     </div>
 
