feat: add show piano button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
 
     <button id="pedal" class="toggle-button">Pedal</button>
+    <button id="show-piano" class="toggle-button">Show piano</button>
     <select name="playing-technique" id="playing-technique">
       <option value="ascending">Ascending</option>
       <option value="descending">Descending</option>
