feat: show playing direction when set to random

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div id="piano"></div>
     </div>
 
+    <p align="center" id="random-playing-technique-direction">Ascending</p>
     <div id="interval-main-buttons">
       <div id="interval-guess-buttons">
         <!-- guess buttons generated here -->
