--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <button id="pedal" class="toggle-button">Pedal</button>
     <button id="show-piano" class="toggle-button">Show piano</button>
+    <button id="show-random-playing-technique" class="toggle-button">Show direction</button>
     <select name="playing-technique" id="playing-technique">
       <option value="ascending">Ascending</option>
       <option value="descending">Descending</option>
