feat: add input for note range

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button id="pedal" class="toggle-button">Pedal</button>
     <button id="show-piano" class="toggle-button">Show piano</button>
     <button id="show-random-playing-technique" class="toggle-button">Show direction</button>
+    <input type="number" id="root-note-range" name="root-note-range" min="1" max="48" value="18"><br><br>
     <select name="playing-technique" id="playing-technique">
       <option value="ascending">Ascending</option>
       <option value="descending">Descending</option>
